--- a/order_book/src/css/App.css
+++ b/order_book/src/css/App.css
@@ -1,12 +1,11 @@
 .App {
   text-align: center;
   background-color: #212124;
-  margin: 0px;
+  margin-top: 0;
 }
 
 .LeftColumn {
   display: inline-block;
-  margin-right: 28%;
 }
 
 .RightColumn {
@@ -19,4 +18,15 @@
 
 .Title {
   color: white;
+}
+
+.Columns {
+  border: 1px solid grey;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin: 0 auto;
+  margin-top: 2.5%;
+  width: 77.2%;
+  justify-content: space-evenly;
+  display: flex;
+  background-color: #1e1e21;
 }
